# xhare

./: CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
app/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/.claude/: settings.local.json
app/scripts/: release.mjs
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: discovery.rs  lan_scan.rs  lib.rs  logger.rs  settings.rs  transfer.rs  tray.rs
app/src/components/: Button.tsx  Collapsible.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  Input.tsx  Loader.tsx  LocalIpChip.test.tsx  LocalIpChip.tsx  NewDeviceDialog.test.tsx  NewDeviceDialog.tsx  NoWiFiLogo.tsx  SettingsDialog.tsx  TitleBar.tsx  Toast.tsx
app/src/components/AlertDialog/: action.tsx  content.tsx  description.tsx  index.ts  root.tsx  title.tsx  trigger.tsx
app/src/components/Dialog/: close.tsx  content.tsx  description.tsx  index.ts  root.tsx  title.tsx  trigger.tsx
app/src/components/RadioGroup/: index.ts  item.tsx  root.tsx
app/src/components/Tooltip/: content.tsx  index.ts  root.tsx  trigger.tsx
app/src/features/devices/: DeviceItem.test.tsx  DeviceItem.tsx  DeviceList.test.tsx  DeviceList.tsx  useDeviceSubscription.ts
app/src/features/file-feed/: BulkActionBar.tsx  DragOverlay.test.tsx  DragOverlay.tsx  EmptyFiles.tsx  FileFeed.test.tsx  FileFeed.tsx  FileIcon.tsx  FileRow.test.tsx  FileRow.tsx  FileRowActions.tsx  NetworkErrorPlaceholder.tsx  NoDevicesPlaceholder.tsx  ProgressBar.test.tsx  ProgressBar.tsx  rowGrid.ts  useFiles.ts  useTransferSubscription.ts
app/src/features/logs/: LogViewer.tsx
app/src/features/settings/: SettingsForm.test.tsx  SettingsForm.tsx  settingsSchema.ts
app/src/hooks/: useAppVersion.ts  useClipboardPaste.ts  useCopySelectedShortcut.ts  useDragDrop.test.ts  useDragDrop.ts  useHotkey.ts  useLocalIp.ts  useNativeDragDrop.ts  usePlatform.test.ts  usePlatform.ts  useSelectAllShortcut.ts  useUnreadBadge.ts  useWindowControls.ts  useWindowDrag.ts
app/src/mock/: devices.ts  files.ts
app/src/services/: connection.ts  devices.ts  files.ts  logs.ts  network.ts  pickFolder.ts  settings.ts  transfer.ts
app/src/stores/: connectionStore.test.ts  connectionStore.ts  devicesStore.test.ts  devicesStore.ts  filesStore.test.ts  filesStore.ts  settingsStore.test.ts  settingsStore.ts
app/src/test/: fixtures.ts  renderWithTooltip.tsx  setup.ts
app/src/types/: Connection.ts  Device.ts  Settings.ts  SharedFile.ts
app/src/utils/: cn.ts  fileType.ts  formatSize.test.ts  formatSize.ts  isValidIp.test.ts  isValidIp.ts  timeAgo.test.ts  timeAgo.ts  uniqueName.ts
