[package]
name = "xhare"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xhare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
hostname = "0.4"
dns-lookup = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
once_cell = "1"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
local-ip-address = "0.6"
dirs = "5"
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }
byteorder = "1"
