[package]
name = "xhare"
version = "0.1.1"
description = "Real-time file sharing between Macs and PCs on the same LAN."
authors = ["Felipe Oliveira <luisfelipe-oliveira@outlook.com.br>"]
edition = "2021"
license = "MIT"

# ─── Release profile: optimize for installer size ─────────────────────────
# These flags cut the release binary from ~12 MB to ~6 MB on macOS / Windows.
# Compile time goes up (codegen-units = 1 disables parallel codegen), but
# that's a release-only cost paid by CI, not by you in `cargo run`.
[profile.release]
opt-level = "z"        # optimize for size over speed
lto = true             # link-time optimization across crates
codegen-units = 1      # better cross-module inlining at cost of compile time
panic = "abort"        # no unwinding tables; saves ~5-10% on size
strip = true           # strip debug symbols from the binary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xhare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
hostname = "0.4"
dns-lookup = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
once_cell = "1"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
local-ip-address = "0.6"
dirs = "5"
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }
byteorder = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
